--- a/style.css
+++ b/style.css
@@ -1,2 +1,169 @@
-body { color: purple }
-body { background-color: #d8da3d }
+
+		@import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Dancing+Script&display=swap');
+*,
+{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Roboto', sans-serif;
+}
+body{
+	background: lightblue;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+}
+
+.container{
+	position: relative;
+	width: 100%;
+	max-width: 1000px ;
+	min-height: 1000px;
+background: #fff;
+margin: 50px;
+display: grid ;
+grid-template-columns: 1fr 2fr;
+box-shadow: 0 35px 55 px rgba(0, 0, 0, 0.1) ;
+}
+
+.container .left-side{
+	position: relative;
+	background:#003147 ;
+	padding: 40px;
+}
+
+.profile{
+	position: relative;
+display: flex;	
+flex-direction: column;
+padding-bottom:20px ;
+border-bottom: 1px solid rgba(255, 255, 255, 0.2) ;
+}
+.profile .iMGbx{
+	position: relative;
+	width:200px ;
+	height: 200px;
+	border-radius: 50%;
+overflow: hidden;
+}
+.profile .iMGbx img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+
+}
+
+.profile h2{
+	color: #fff;
+	font-size: 1.5em;
+	margin-top: 20px;
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: 600;
+	line-height: 1.5em;
+}
+
+.profile h2 span{
+font-size: 0.8em ;
+	font-weight: 300;
+}
+
+.contact{
+	padding-top: 40px;
+}
+
+.title{
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 1px;
+	margin-bottom: 20px;
+
+}
+
+.contact ul{
+position: relative;
+}
+
+.contact ul li{
+	position: relative;
+	list-style: none;
+	margin: 20px 0;
+	cursor: pointer;
+}
+.contact ul li .icon{
+	display: inline-block;
+	width: 30px;
+	font-size: 20px;
+	color: #03a9f4;
+}
+.contact ul li span{
+	color: #fff;
+	font-weight: 300;
+}
+
+.infoeducation li{
+	margin-bottom: 15px;
+	list-style: none;
+}
+
+
+.infoeducation h5{
+	color: #03a9f4;
+	font-weight: 500;
+}
+
+.infoeducation h4{
+	color: #fff;
+	font-weight: 500;
+}
+
+.language li{
+color: #fff;
+	font-weight: 500;
+	list-style: none;
+}
+
+
+
+.container .right-side{
+	position: relative;
+	background:#fff ;
+	padding: 40px;
+}
+.about{
+	margin-bottom: 50px;
+}
+
+.about:last-child{
+	margin-bottom: 0px;
+}
+
+.title2{
+	color: #003147;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
+
+}
+
+.p{
+	color:#333;
+
+}
+.skills .box{
+	position: relative;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 150px 1fr;
+	align-items: center;
+}
+.skills .box h4{
+	text-transform: uppercase;
+	font-weight: 500;}
+
+
